overlapping sections fixed?

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -27,7 +27,6 @@ html {
 }
 
 @media (max-width: 2000px) {
-
     }
 
 
@@ -56,6 +55,7 @@ html {
 #CONTACT {
     height: 100vh;
     padding: 3rem; /*this stops the sections from overlapping with one another*/
+    overflow-y: scroll; /*this is my way to prevent the sections from overlapping and being more responsive to different screen sizes*/
 }
 
 #HOME {
